fix: remove 60px margin-top on footer tag to close the gap with the orange hashtags section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,7 +578,7 @@ nav > div:first-child {
 
 /* Footer Compacting */
 footer {
-    margin-top: 60px !important;
+    margin-top: 0px !important;
 }
 footer > div:first-child {
     padding-top: 40px !important;
